--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,18 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'org.gradle.api.plugins:gradle-nexus-plugin:0.3'
+    }
+}
+
 apply plugin: 'java'
+apply plugin: 'nexus'
 
 group = 'net.floatingsun'
-version = '1.0.0-SNAPSHOT'
+version = '0.1.0'
 
 repositories {
     mavenCentral()
@@ -9,8 +20,39 @@ repositories {
 
 dependencies {
     compile 'org.slf4j:slf4j-api:1.7.5'
-    compile 'com.squareup.retrofit:retrofit:1.1.1'
+    compile 'com.squareup.retrofit:retrofit:1.2.1'
 
     testCompile 'junit:junit:4.11'
     testCompile 'org.assertj:assertj-core:1.3.0'
+}
+
+modifyPom {
+    project {
+        name 'jetcd'
+        description 'Java client for etcd'
+        url 'https://github.com/diwakergupta/jetcd'
+        inceptionYear '2013'
+
+        scm {
+            url 'https://github.com/diwakergupta/jetcd'
+            connection 'scm:https://github.com/diwakergupta/jetcd'
+            developerConnection 'scm:git@github.com:diwakergupta/jetcd.git'
+        }
+
+        licenses {
+            license {
+                name 'The Apache Software License, Version 2.0'
+                url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                distribution 'repo'
+            }
+        }
+
+        developers {
+            developer {
+                id 'diwakergupta'
+                name 'Diwaker Gupta'
+                email 'diwaker@floatingsun.net'
+            }
+        }
+    }
 }
