--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,13 @@ buildscript {
 
     dependencies {
         classpath 'org.gradle.api.plugins:gradle-nexus-plugin:0.3'
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.4'
     }
 }
 
 apply plugin: 'java'
 apply plugin: 'nexus'
+apply plugin: 'versions'
 
 group = 'net.floatingsun'
 version = '0.1.0'
@@ -20,10 +22,10 @@ repositories {
 
 dependencies {
     compile 'org.slf4j:slf4j-api:1.7.5'
-    compile 'com.squareup.retrofit:retrofit:1.2.1'
+    compile 'com.squareup.retrofit:retrofit:1.2.2'
 
     testCompile 'junit:junit:4.11'
-    testCompile 'org.assertj:assertj-core:1.3.0'
+    testCompile 'org.assertj:assertj-core:1.4.0'
 }
 
 modifyPom {
