--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ repositories {
 dependencies {
     compile 'org.slf4j:slf4j-api:1.7.5'
     compile 'com.squareup.retrofit:retrofit:1.2.2'
+    compile 'com.google.guava:guava:15.0'
 
     testCompile 'junit:junit:4.11'
     testCompile 'org.assertj:assertj-core:1.4.0'
