Created trusted http client for SSL/TLS and client cert authentication.
* Added TrustedApacheClient for retrofit (delegation pattern on ApacheClient using custom params for HttpClient)
* Added method newTrustedInstance for EtcdClientFactory
* Added new constructor for EtcdClientImpl with custom retrofit client
* Added test for https and all necessary certificates

Why do I override retrofit.client.Client in the jetcd project, not in retrofit? Retrofit already supports SSL/TLS Auth in ApacheClient, but it requires quitely preconfigured apache http client. So, we have to configure apache http client somewhere, for example, in factory class. But there is too much code to initialize ssl apache http client properly. So, I think It well be good idea to hide all this work in the client proxy class TrustedApacheClient and use simple call new TrustedApacheClient(credentials). Credentials object contains client key, client cert and ca cert.

--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,9 @@ dependencies {
     compile 'org.slf4j:slf4j-api:1.7.5'
     compile 'com.squareup.retrofit:retrofit:1.2.2'
     compile 'com.google.guava:guava:15.0'
+    compile 'org.apache.httpcomponents:httpclient:4.0.1'
+    compile 'org.bouncycastle:bcprov-jdk16:1.46'
+    compile 'commons-io:commons-io:2.4'
 
     testCompile 'junit:junit:4.11'
     testCompile 'org.assertj:assertj-core:1.4.0'
