--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ repositories {
 dependencies {
     compile 'org.slf4j:slf4j-api:1.7.5'
     compile 'com.squareup.retrofit:retrofit:1.3.0'
+    compile 'com.squareup.retrofit:converter-jackson:1.3.0'
     compile 'com.google.guava:guava:15.0'
 
     testCompile 'junit:junit:4.11'
