--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 buildscript {
     repositories {
+        jcenter()
         mavenCentral()
     }
 
     dependencies {
-        classpath 'org.gradle.api.plugins:gradle-nexus-plugin:0.3'
+        classpath 'org.gradle.api.plugins:gradle-nexus-plugin:0.6.1'
         classpath 'com.github.ben-manes:gradle-versions-plugin:0.4'
     }
 }
@@ -14,7 +15,7 @@ apply plugin: 'nexus'
 apply plugin: 'versions'
 
 group = 'net.floatingsun'
-version = '0.1.0'
+version = '0.2.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
