Build and run etcd for travis tests.
Will finally allow Travis to actually run tests!

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,8 @@
 language: java
-
+install:
+    - git clone https://github.com/coreos/etcd
+    - pushd etcd && ./build && popd
+before_script:
+    - etcd/etcd &
+after_script:
+    - pkill -f etcd
