Fix etcd to use v0.2.0
Otherwise we get nasty surprises on master, like
https://travis-ci.org/diwakergupta/jetcd/builds/16915531

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java
 install:
     - git clone https://github.com/coreos/etcd
-    - pushd etcd && ./build && popd
+    - pushd etcd && git checkout v0.2.0 && ./build && popd
 before_script:
     - etcd/etcd &
 after_script:
